--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 src/KMPTC
 
 #input and output files
-../data/*
-../output/*
-../output/output.txt
-../output/stat.csv
+/data/*
+/output/*
+/output/output.txt
+/output/stat.csv
